<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:text="Данные для передачи в другую активити"
        android:gravity="center"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="#068FB1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idIn"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/id"
        android:paddingStart="14sp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="#068FB1"
        android:textColorHint="#87A3AA"
        android:background="@drawable/shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/destinationIn"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/destination"
        android:paddingStart="14sp"
        android:textColor="#068FB1"
        android:textColorHint="#87A3AA"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idIn" />

    <EditText
        android:id="@+id/departureTimeIn"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/departureTime"
        android:paddingStart="14sp"
        android:textColor="#068FB1"
        android:textColorHint="#87A3AA"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destinationIn" />

    <EditText
        android:id="@+id/arrivalTimeIn"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/arrivalTime"
        android:paddingStart="14sp"
        android:textColor="#068FB1"
        android:textColorHint="#87A3AA"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departureTimeIn" />

    <EditText
        android:id="@+id/ticketPriceIn"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/ticketPrice"
        android:paddingStart="14sp"
        android:textColor="#068FB1"
        android:textColorHint="#87A3AA"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrivalTimeIn" />

    <Button
        android:id="@+id/button"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#068FB1"
        android:text="@string/dataTransfer"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketPriceIn" />

</androidx.constraintlayout.widget.ConstraintLayout>